<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
	</parent>
	<groupId>dev.kkoncki.bandup</groupId>
	<artifactId>parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<name>BandUp</name>
	<description>A social application for musicians looking for a band</description>

	<modules>
		<module>application</module>
		<module>commons</module>
		<module>configuration</module>
		<module>modules</module>
	</modules>

	<properties>
		<revision>1.0.1</revision>
		<java.version>17</java.version>
		<liquibase.core.version>4.18.0</liquibase.core.version>
		<lombok.version>1.18.30</lombok.version>
		<spring-boot-starter-security.version>3.2.4</spring-boot-starter-security.version>
		<jjwt.version>0.9.1</jjwt.version>
		<jaxb-api.version>2.3.0</jaxb-api.version>
		<mockito.version>5.5.0</mockito.version>
		<firebase-admin.version>9.1.1</firebase-admin.version>
		<web-socket.version>3.4.1</web-socket.version>
		<messaging.version>6.2.1</messaging.version>
		<springdoc-openapi.version>2.6.0</springdoc-openapi.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
